base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: pro-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: product-api
  template:
    metadata:
      labels:
        deployment: product-api
    spec:
      containers:
      - name: product-api
        image: quay.io/jbarea/product-api:1.0
        ports:
        - containerPort: 8080
          protocol: TCP
