base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
  namespace: pro-shop
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
