base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: product-api
  namespace: pro-shop
spec:
  host: #TODO
  to:
    kind: Service
    name: product-api
